--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -3,4 +3,5 @@
   font-size: 50px;
   justify-self: center;
   align-self: center;
+  max-width: 100vw;
 }
