--- a/src/Styles/ContactForm.scss
+++ b/src/Styles/ContactForm.scss
@@ -1,5 +1,6 @@
 .contact-form {
-  padding: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   display: flex;
   justify-content: center;
   flex-direction: column;
