--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  max-width: 100vw;
   z-index: 1000;
   display: flex;
   justify-content: space-between; // Aligns navigation to the left and icons to the right
