--- a/src/Styles/Projects.scss
+++ b/src/Styles/Projects.scss
@@ -6,6 +6,7 @@
   background-size: cover; // Ensure the background covers the entire container
   background-position: center; // Center the background image
   background-repeat: no-repeat; // Prevent the background image from repeating
+  text-align: center;
 }
 
 .title {
@@ -14,6 +15,7 @@
 }
 
 .projects-container {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 50px;
@@ -55,7 +57,6 @@
 
   .project-description {
     z-index: 2; // Ensures text is above the image if they overlap
-    text-align: center;
   }
 
   .project-image {
